# ProceduralHW1

./: CMakeLists.txt  README.txt  Train.cpp  container.cpp  container.h  main.cpp  plane.cpp  plane.h  ship.cpp  ship.h  train.h  vehicle.cpp  vehicle.h
Documentation/: Описание программы.txt
tests/: test10.txt  test100.txt  test1000.txt  test10000.txt  test5000.txt
